2000-08-10 11:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
        * fixed handling of while[] and case[]
        * YY_USER_ACTION placed into a comment (the resulting 
        object file is 20kB smaller)

2000-08-09 20:00 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     * Corrected support for BREAK ( ).

2000-08-09 17:15 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/simplex.c
     * Minor improvements.

   * source/compiler/harbour.slx
     - Removed un-needed cases in hb_lex_CustomAction() added by Ryszard.
     - Removed 1 rule each for WHILE CASE BREAK and RETURN to default trailing '[' to string delimiter.

   * tests/keywords.prg
     * Corrected few lines that had '[' as Array Index to String Delimiter after CASE, BREAK etc.

     /* Note keywords.prg should now be valid other than 3 (old) correct errors to do with FIELD*/
     SimpLex based harbour does compile it correctly Flex reports 26 incorrect errors.

2000-08-09 15:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/pp/ppcore.c
     ! Reset s_iIncludes to zero in hb_pp_init(), so that the include
       file nesting limit will not accumulate for multiple compilation.

2000-08-09 14:15 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.slx
        * fixed to work with current syntax rules in harbour.y

2000-08-09 07:10 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
  *doc/en/sayget.txt
  *doc/en/file.txt
     *small formating
  *utils/hbdoc/genhtm.prg
  *utils/hbdoc/genrtf.prg
  *utils/hbdoc/hbdoc.prg
      *small changes

2000-08-08 12:11 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/common/hbver.c
     ! fixed a couple of new warning from last change ;-)

2000-08-09 09:25 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.l
        * fixed RETURN [string] syntax

2000-08-08 17:15 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * tests/fsplit.prg